[gd_scene load_steps=15 format=3 uid="uid://bhgq18u0u5fm8"]

[ext_resource type="PackedScene" uid="uid://bhbutqo00u12j" path="res://objects/world2/drone resources/parallaxdrone.tscn" id="2_mic08"]
[ext_resource type="FontFile" uid="uid://bxgpde8amasen" path="res://Resources/Font/fanwood-master/Fanwood Text.otf" id="3_6gynv"]
[ext_resource type="PackedScene" uid="uid://dq1m7stg5vvah" path="res://objects/player Obj/birju.tscn" id="3_c64g6"]
[ext_resource type="Script" path="res://objects/world2/Camera2D.gd" id="3_st6hh"]
[ext_resource type="PackedScene" uid="uid://cd8xhh3poh7bc" path="res://objects/world2/drone resources/Platform.tscn" id="5_xduyb"]
[ext_resource type="PackedScene" uid="uid://d16mibxdo8fx4" path="res://objects/world2/drone resources/drone/drone.tscn" id="6_fj23v"]
[ext_resource type="PackedScene" uid="uid://c6e4qjdopuavv" path="res://objects/components/orb.tscn" id="8_h2a56"]
[ext_resource type="Script" path="res://objects/world2/laserwall.gd" id="9_7mkvm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxi4e"]
bg_color = Color(0.266667, 0.74902, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0duon"]
size = Vector2(36, 2406)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7tthl"]
bg_color = Color(0.901961, 0, 0.0941176, 1)

[sub_resource type="Animation" id="Animation_bph4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Robot/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fvwii"]
resource_name = "youdied"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Robot/Label:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in2kp"]
_data = {
"RESET": SubResource("Animation_bph4p"),
"youdied": SubResource("Animation_fvwii")
}

[node name="Wardenregion" type="Node2D"]

[node name="Parallaxhome" parent="." instance=ExtResource("2_mic08")]

[node name="Robot" parent="." groups=["Player"] instance=ExtResource("3_c64g6")]
position = Vector2(180, 147)

[node name="ProgressBar" type="ProgressBar" parent="Robot"]
offset_left = -21.0
offset_top = -80.0
offset_right = 114.0
offset_bottom = -53.0
scale = Vector2(0.385, 0.385)
theme_override_styles/fill = SubResource("StyleBoxFlat_dxi4e")
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="Robot"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_6gynv")
theme_override_font_sizes/font_size = 61
text = "You Died"

[node name="laserwall2" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="laserwall2"]
position = Vector2(-24, 3)
script = ExtResource("9_7mkvm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="laserwall2/Area2D"]
position = Vector2(462, 301)
rotation = 1.5708
shape = SubResource("RectangleShape2D_0duon")

[node name="Timer" type="Timer" parent="laserwall2"]
process_callback = 0
wait_time = 3.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(58, 92)
zoom = Vector2(0.8, 0.8)
script = ExtResource("3_st6hh")

[node name="Platform" parent="." instance=ExtResource("5_xduyb")]
position = Vector2(193, 234)

[node name="Platform2" parent="." instance=ExtResource("5_xduyb")]
position = Vector2(72, 119)

[node name="Platform3" parent="." instance=ExtResource("5_xduyb")]
position = Vector2(519, 112)

[node name="Platform4" parent="." instance=ExtResource("5_xduyb")]
position = Vector2(394, 232)

[node name="Drone" parent="." instance=ExtResource("6_fj23v")]
position = Vector2(413, 1)
scale = Vector2(0.26, 0.26)

[node name="ProgressBar" type="ProgressBar" parent="Drone"]
offset_left = -119.0
offset_top = -54.0
offset_right = 381.0
offset_bottom = 21.0
scale = Vector2(0.46, 0.46)
theme_override_styles/fill = SubResource("StyleBoxFlat_7tthl")
show_percentage = false

[node name="Orb" parent="." instance=ExtResource("8_h2a56")]
position = Vector2(302, 65)

[node name="PlatformTL" type="Marker2D" parent="." groups=["HoverPlat"]]
position = Vector2(69, 14)

[node name="PlatformBL" type="Marker2D" parent="." groups=["HoverPlat"]]
position = Vector2(185, 137)

[node name="PlatformTR" type="Marker2D" parent="." groups=["HoverPlat"]]
position = Vector2(391, 147)

[node name="PlatformBR" type="Marker2D" parent="." groups=["HoverPlat"]]
position = Vector2(519, 22)

[node name="AnimationPlayerDr" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_in2kp")
}

[connection signal="weaponHit" from="Robot" to="Drone" method="_on_robot_weapon_hit"]
[connection signal="body_entered" from="laserwall2/Area2D" to="laserwall2/Area2D" method="_on_body_entered"]
[connection signal="timeout" from="laserwall2/Timer" to="laserwall2/Area2D" method="_on_timer_timeout"]
[connection signal="birjuHit" from="Drone" to="Robot" method="_on_drone_birju_hit"]
[connection signal="value_changed" from="Drone/ProgressBar" to="Orb" method="_on_dronevalue_changed"]
